# poc-rust

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  README.md  main  main.rs
RustyObjectNotation/: Cargo.toml
RustyObjectNotation/src/: main.rs
destructuring/src/: main.rs
markdown-wasm/: Cargo.toml
mdown4html/: Cargo.toml  README.md  index.html  index.js  package-lock.json
mdown4html/src/: lib.rs
mdown4js/: Cargo.toml  README.md  build-and-start.sh  index.js  package-lock.json  package.json  webpack.config.js
mdown4js/src/: lib.rs
mkdown-wasm/: .gitignore  Cargo.toml  README.md  build-and-test.sh  mdown.py
my-termion/: Cargo.toml
rust-simple/: .gitignore  Cargo.toml  README.md
rust-simple/src/: main.rs  simple.rs  test1.rs
rust_wasi_markdown_parser/: .gitignore  Cargo.toml  README.md  test.py
rust_wasi_markdown_parser/src/: main.rs
variables/: README.md
variables/src/: main.rs
wasmtime/: Cargo.toml
wasmtime/src/: main.rs
