[package]
name = "mdown4html"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pulldown-cmark = "0.9.1"
wasm-bindgen = "0.2.80"

[dependencies.js-sys]
version = "0.3.57"

[dependencies.web-sys]
version = "0.3.57"
features = [
    'console',
    'Window',
    'Document',
    'DocumentFragment',
    'Node',
    'Element',
    'HtmlElement',
    'HtmlSlotElement',
    'HtmlTemplateElement',
    'CustomElementRegistry',
    'ShadowRoot',
    'ShadowRootInit',
    'ShadowRootMode',
]

