[package]
name = "mdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Pull parser for Markdown
pulldown-cmark = "0.9.1"
# Facilitating high-level interactions between
# Wasm modules and JavaScript using wasm-bindgen
wasm-bindgen = "0.2.80"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false